# ikea-led-obegraensad

./: .gitignore  CMakeLists.txt  IKEA.code-workspace  README.md  ikea.code-workspace  platformio.ini  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/AsyncElegantOTA/: AsyncElegantOTA.h  CMakeLists.txt
components/arduino/: CMakeLists.txt
frontend/: .env  webgui.py
include/: secrets.h  signs.h
include/plugins/: DDPPlugin.h  FireworkPlugin.h
src/: CMakeLists.txt  PluginManager.cpp  idf_component.yml  main.cpp  ota.cpp  screen.cpp
src/plugins/: AnimationPlugin.cpp  BreakoutPlugin.cpp  CirclePlugin.cpp  DDPPlugin.cpp  LinesPlugin.cpp  PongClockPlugin.cpp  SnakePlugin.cpp
